# IOT-detection-using-federated-deep-learning

./: README.md
securebotnet/: README.md  app.py  create_samples.py  ml_model.py  pyproject.toml  sai.txt
securebotnet/attached_assets/: Pasted-Detecting-Ddos-Attacks-Using-Machine-Learning-integrati_1766060818829.txt
securebotnet/datasets/: ddos_sample_10_land_attack.csv  ddos_sample_2_udp_flood.csv  ddos_sample_4_icmp_flood.csv  ddos_sample_5_slowloris.csv  ddos_sample_6_dns_amplification.csv  ddos_sample_7_ntp_amplification.csv  ddos_sample_9_fraggle_attack.csv
securebotnet/instance/: ddos_detection.db
securebotnet/models/: ddos_model.pkl  feature_importance.pkl  scaler.pkl
securebotnet/static/css/: style.css
securebotnet/static/js/: main.js
securebotnet/templates/: base.html  dashboard.html  index.html  login.html  real_time.html  register.html  simulate.html  upload.html
securebotnet/templates/admin/: analytics.html  dashboard.html  reports.html  users.html
securebotnet/uploads/: DrDoS_DNS.csv  ddos_sample_1_syn_flood.csv  ddos_sample_3_http_flood.csv  ddos_sample_8_smurf_attack.csv
